--- a/Assignments/2/client/package.json
+++ b/Assignments/2/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@truffle/contract": "^4.3.38",
     "bootstrap": "^5.1.3",
+    "eth-crypto": "^2.1.0",
     "react": "16.11.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "16.11.0",
