--- a/Assignments/2/client/package.json
+++ b/Assignments/2/client/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^1.6.4",
     "react-dom": "16.11.0",
     "react-router-dom": "^5.3.0",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
   },
